--- a/Serbian_Latin.lng
+++ b/Serbian_Latin.lng
@@ -1,7 +1,7 @@
 |~LANGUAGENAME|
 |Srpski|
 |~LANGUAGEVERSION|
-|1.37|
+|1.38|
 |~LANGUAGEAUTHOR|
 |Ljuba Ćirović|
 |~LANGUAGEAUTHOREMAIL|
@@ -93,7 +93,7 @@
 |Current settings|
 |Aktuelna podešavanja|
 |&Show dialog for collecting user input as additional entropy|
-|Prikaži dijalog za prikupljanje korisničkog unosa kao dodatne entropije|
+|Prikaži okvir za prikupljanje korisničkog unosa (dodatna entropija)|
 |Do not store data in the Windows clipboard history and the cloud clipboard|
 |Ne čuvati podatke u istorijama Windows radne table i radne table u oblaku|
 |The following options apply to entry clipboard commands in the main window (like 'Copy User Name' and 'Copy Password').|
@@ -118,8 +118,6 @@
 |Razmak ( )|
 |Special|
 |Specijalno|
-|High ANSI characters|
-|Visoki ANSI znakovi|
 |Brackets ([, ], {, }, (, ), <, >)|
 |Zagrade ([, ], {, }, (, ), <, >)|
 |Group:|
@@ -874,8 +872,8 @@
 |Pokaži punu putanju u naslovnoj traci (umesto samo imena datoteke)|
 |Enable auto-type features|
 |Omogući odlike automatskog popunjavanja|
-|Copy URLs to clipboard instead of launching them (exception: cmd:// URLs)|
-|Prepiši URLove na radnu tablu umesto da ih pokreneš (osim: cmd:// URLova)|
+|Copy URLs to clipboard instead of opening them (exception: cmd:// URLs)|
+|Prepiši URLove na radnu tablu umesto da ih otvoriš (osim: cmd:// URLova)|
 |Copy &URL to Clipboard|
 |Prepiši URL na radnu tablu|
 |Exit program instead of locking the workspace after the specified time|
@@ -1380,3 +1378,9 @@
 |preporučuje se|
 |~LANGISO6391CODE|
 |sr|
+|Latin-1 Supplement|
+|Dodatak za Latin-1|
+|The character set is invalid|
+|Neispravan skup znakova|
+|The pattern is invalid|
+|Neispravan šablon|
